# curse_work_4

./: README.md  main.py  pyproject.toml  vacancies.json
src/: any_parser.py  any_saver.py  hh_api.py  json_saver.py  vacancy.py
utils/: convert_to_object.py
