[tool.poetry]
name = "curse-work-4"
version = "0.1.0"
description = "a program that receives information about vacancies from the hh.ru platform in Russia"
authors = ["sergey <bersercwow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.10"
pytest = "^8.1.1"
coverage = "^7.6.4"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
